# playmedia

./: Pipfile  README.md  requirements.txt  setup.cfg  setup.py
playmedia/: __init__.py  multiple_files.py  single_file.py
src/: __init__.py  playmedia.py
src/playmedia/: playmedia.py
src/playmedia.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
