[metadata]
name = playmedia
version = 0.0.2
author = Satvik Virmani
author_email = virmanisatvik01@gmail.com
description = A python package to play and control media files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SatvikVirmani/playmedia
project_urls =
    Bug Tracker = https://github.com/SatvikVirmani/playmedia/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = python-vlc

[options.packages.find]
where = src